tests/parser/valid/decls_ok.c
int main() {
    int x;
    int a, b, c;
    a = 1 + 2;
    b = a * 3;
    return b;
  }
  