tests/parser/invalid/err_assignment_missing_rhs.c
int main() {
  x = ;
}
// after =, need an expression